--- a/master/website/board/templates/board3/chart2.html
+++ b/master/website/board/templates/board3/chart2.html
@@ -74,30 +74,33 @@
         data: {
             labels: ['제조원가', '매출액'],
             datasets: [{
-                label: '설장률',
+                label: '성장률',
                 type: 'line',
                 yAxisID: 'y-axis-growth',
                 fill: false,
                 lineTension: 0,
-                backgroundColor: '#888888',
-                borderColor: '#888888',
+                pointRadius: 0,
+                backgroundColor: 'rgba(127, 127, 127, 0.5)',
+                borderColor: 'rgba(127, 127, 127, 0.5)',
                 data: [9, 5.7],
             }, {
                 label: '전년',
                 type: 'bar',
                 yAxisID: 'y-axis-cost',
-                backgroundColor: '#FFCC66',
-                data: [70, 110],
-                borderWidth: 0,
-                hoverBorderWidth: 0
+                backgroundColor: 'rgba(255, 127, 101, 0.4)',
+                borderWidth: 1.5,
+                hoverBorderWidth: 4,
+                borderColor: 'rgba(255, 127, 101)',
+                data: [70, 110]
             }, {
                 label: '당년',
                 type: 'bar',
                 yAxisID: 'y-axis-cost',
-                backgroundColor: '#66CCFF',
-                data: [74, 110],
-                borderWidth: 0,
-                hoverBorderWidth: 0
+                backgroundColor: 'rgba(101, 127, 255, 0.4)',
+                borderWidth: 1.5,
+                hoverBorderWidth: 4,
+                borderColor: 'rgba(101, 127, 255)',
+                data: [74, 110]
             }]
         },
         options: {
@@ -146,6 +149,8 @@
                 lineTension: 0,
                 backgroundColor: '#888888',
                 borderColor: '#888888',
+                borderRadius: 10,
+
                 data: [3.7, 4.3]
             }, {
                 label: '전월',
