--- a/master/website/board/templates/board3/cc_costbill1_if.html
+++ b/master/website/board/templates/board3/cc_costbill1_if.html
@@ -23,6 +23,37 @@
     var csrftoken = getCookie('csrftoken');
 
     var xhr;
+
+    function searchCostbill()
+    {
+        itemcd = document.getElementById('itemcd').value;
+        date = document.getElementById('date').value;
+        if(date == '')
+        {
+            document.getElementById('date').style.backgroundColor = "#DDEEFF";
+            document.getElementById('date').focus();
+            return false;
+        }
+        if(date.length < 6)
+        {
+            alert('날짜길이를 확인해주세요. 6자리');
+
+            document.getElementById('date').style.backgroundColor = "#DDEEFF";
+            document.getElementById('date').focus();
+            return false;
+
+        }
+        else
+        {
+            var strurl = "?itemcd="+ itemcd + "&periodcd=" + date;
+            location.href = strurl;
+        }
+    }
+    function maxLengthCheck(object){
+    if (object.value.length > object.maxLength){
+      object.value = object.value.slice(0, object.maxLength);
+    }
+  }
 </script>
 {% endblock %}
 
@@ -39,6 +70,57 @@
                 <h3 class="page-header"><i class="fa fa-table"></i>분석용 I/F</h3>
             </div>
         </div>
+        <section class='skills' data-aos='fade-up'>
+            <div class='container'>
+                <div class='row'>
+                    <div class="col-lg-2">
+                        <i>버전
+                            <select class="form-control" onchange="location = this.value;">
+                                {% for i in rsVersioncd %}
+                                {% if i.version_cd == versioncd %}
+                                <option value="?versioncd={{ i.version_cd }}" selected>{{ i.version_cd }}</option>
+                                {% else %}
+                                <option value="?versioncd={{ i.version_cd }}">{{ i.version_cd }}</option>
+                                {% endif %}
+                                {% endfor %}
+                            </select>
+                        </i>
+                    </div>
+                    <div class="col-lg-10">
+                        <div class="table-responsive">
+                            <table align="right">
+                                <tr>
+                                    <td width="10%"><br>조회설정&nbsp&nbsp&nbsp:&nbsp&nbsp&nbsp </td>
+                                    <td width="20%">
+                                        <i>모델명
+                                            <select class="form-control" id="itemcd">
+                                                <option value="">-----SELECT-----</option>
+                                                {% for i in rsItemcd %}
+                                                {% if i.모델명 == itemcd %}
+                                                <option value="{{ i.item_cd }}" selected>{{ i.모델명 }}</option>
+                                                {% else %}
+                                                <option value="{{ i.item_cd }}">{{ i.모델명 }}</option>
+                                                {% endif %}
+                                                {% endfor %}
+                                            </select>
+                                        </i>
+                                    </td>
+                                    <td width="20%">
+                                        <i>날짜
+                                            <input type="number" maxlength="6" class="form-control" id="date" placeholder="YYYYMM" oninput="maxLengthCheck(this)" value="{{ periodcd }}">
+                                        </i>
+                                    </td>
+                                    <td width="20%">
+                                        <br>
+                                        <button class="btn btn-primary btn-sm" onclick="searchCostbill()">조회</button>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <br>
         <div class="row">
             <div class="col-lg-12">
@@ -48,68 +130,126 @@
                         <table class="table">
                             <thead>
                             <tr>
-                                <th>id</th>
-                                <th>version_id</th>
-                                <th>itemplan_id</th>
-                                <th>ic_idlc</th>
-                                <th>ic_dlfc</th>
-                                <th>ic_dlvc</th>
-                                <th>ic_idohc</th>
-                                <th>ic_ohdfe</th>
-                                <th>ic_ohdfd</th>
-                                <th>ic_ohdvc</th>
-                                <th>proamt_unit</th>
-                                <th>proamt_acc</th>
-                                <th>proq</th>
+                                <th width="20%">모델명</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.모델명}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>생산량</th>
+                                {% for i in rsCostbill1 %}
+                                 <td>
+                                    {{i.생산량}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>표준단가</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.단가}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>매출</th>
+                                {% for i in rsCostbill1 %}
+                                 <td>
+                                    {{i.매출}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>기초제공품재료비</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.기초제공품합계}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>당기투입재료비</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.당기투입재료비}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>당기투입노무비소계</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.당기투입노무비합}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>당기투입제조경비소계</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.당기투입제조경비합}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>당기투입총합</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.당기투입합계}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>당기사용재료비</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.당기사용재료비}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>당기사용노무비소계</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.당기사용제조원가총액}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>당기사용제조경비소계</th>
+                                {% for i in rsCostbill1 %}
+                                 <td>
+                                    {{i.당기사용제조경비합}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>당기사용제조원가총액</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.당기사용제조원가총액}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>타계정으로대체재료비</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.타계정으로대체재료비}}
+                                </td>
+                                {% endfor %}
+                            </tr>
+                            <tr>
+                                <th>기말제공품재료비</th>
+                                {% for i in rsCostbill1 %}
+                                <td>
+                                    {{i.기말제공품합계}}
+                                </td>
+                                {% endfor %}
                             </tr>
                             </thead>
-                            {% for i in rsCostbill1 %}
-                            <tbody>
-                            <tr>
-                                <td>
-                                    {{ i.id }}
-                                </td>
-                                <td>
-                                    {{ i.version_id }}
-                                </td>
-                                <td>
-                                    {{ i.itemplan_id }}
-                                </td>
-                                <td>
-                                    {{ i.ic_idlc }}
-                                </td>
-                                <td>
-                                    {{ i.ic_dlfc }}
-                                </td>
-                                <td>
-                                    {{ i.ic_dlvc }}
-                                </td>
-                                <td>
-                                    {{ i.ic_idohc }}
-                                </td>
-                                <td>
-                                    {{ i.ic_ohdfe }}
-                                </td>
-                                <td>
-                                    {{ i.ic_ohdfd }}
-                                </td>
-                                <td>
-                                    {{ i.ic_ohdvc }}
-                                </td>
-                                <td>
-                                    {{ i.proamt_unit }}
-                                </td>
-                                <td>
-                                    {{ i.proamt_acc }}
-                                </td>
-                                <td>
-                                    {{ i.proq }}
-                                </td>
-                            </tr>
-                            </tbody>
-                            {% endfor %}
-                            </tbody>
-
                         </table>
                         {% else %}
                         <div> 데이터를 업로드 해주세요</div>
